--- a/Coursework/Shared/NavMenu.razor
+++ b/Coursework/Shared/NavMenu.razor
@@ -22,7 +22,14 @@
                     <span class="oi oi-person" /> Staffs
                 </NavLink>
             </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="requests">
+                    <span class="oi oi-person" /> Requests
+                </NavLink>
+            </div>
         }
+
+        
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="change-password">
                 <span class="oi oi-key" /> Change Password
