--- a/Coursework/Shared/NavMenu.razor
+++ b/Coursework/Shared/NavMenu.razor
@@ -27,6 +27,19 @@
                     <span class="oi oi-person" /> Requests
                 </NavLink>
             </div>
+                        <div class="nav-item px-3">
+                <NavLink class="nav-link" href="inventorylog">
+                    <span class="oi oi-person" /> Inventory Log
+                </NavLink>
+            </div>
+                      
+                        <div class="nav-item px-3">
+                <NavLink class="nav-link" href="inventorydetail">
+                    <span class="oi oi-person" /> Inventory Detail
+                </NavLink>
+            </div>
+            
+      
         }
 
         
