--- a/Coursework/Pages/Request.razor
+++ b/Coursework/Pages/Request.razor
@@ -282,12 +282,22 @@
                 Guid id = _requestedItemModel.Id;
                 bool isApproved = true;
 
-                _requestedItems = InventoryItemService.ApproveItem(_adminName, _requestedBy, itemName, quantity, id,isApproved);
+                DateTime currentTime = DateTime.Now;
+                DateTime startTime = new DateTime(currentTime.Year, currentTime.Month, currentTime.Day, 9, 0, 0);
+                DateTime endTime = new DateTime(currentTime.Year, currentTime.Month, currentTime.Day, 16, 0, 0);
+
+                if (currentTime >= startTime && currentTime <= endTime && currentTime.DayOfWeek >= DayOfWeek.Monday && currentTime.DayOfWeek <= DayOfWeek.Friday)
+                {
+                    _requestedItems = InventoryItemService.ApproveItem(_adminName, _requestedBy, itemName, quantity, id,isApproved);
+                    InventoryItemService.UpdateDetailedInventory();
+                }
+                else{
+                    _approveItemErrorMessage = "You can only approve from Monday to Friday between 9 AM to 4 PM";
+                }
                 
 
 
-                _showApproveItemDialog = false;
-               
+                
             
             }
             catch (Exception e)
