added date filter

--- a/Coursework/Pages/ChangePassword.razor
+++ b/Coursework/Pages/ChangePassword.razor
@@ -5,12 +5,9 @@
 </nav>
 <div class="form-body">
     <div class="form-container">
-        @if (_globalState.CurrentUser != null && _globalState.CurrentUser.HasInitialPassword)
-        {
-            <AlertMessage Type="warning" Message="You are using the initial password. Please change it." />
-        }
+   
         <form class="text-center" @onsubmit="ChangePasswordHandler">
-            <div class="form-floating">
+            <div class="form-floating mb-3">
                 <input type="password" class="form-control current-password" @bind="_currentPassword"
                     placeholder="Current Password" />
                 <label for="floatingInput">Current Password</label>
