--- a/Coursework/Shared/NavMenu.razor
+++ b/Coursework/Shared/NavMenu.razor
@@ -38,6 +38,11 @@
                     <span class="oi oi-person" /> Inventory Detail
                 </NavLink>
             </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="barchart">
+                    <span class="oi oi-person" /> barchart
+                </NavLink>
+            </div>
             
       
         }
