--- a/Coursework/_Imports.razor
+++ b/Coursework/_Imports.razor
@@ -4,6 +4,11 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+
+@using MudBlazor
 @using Coursework
 @using Coursework.Shared
 @using Coursework.Data
+
+
+@inject IJSRuntime JSRuntime
